--- a/OHIO/CSS/OhioCSS.css
+++ b/OHIO/CSS/OhioCSS.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    background-image: url('Images/Background.png');
+    background-image: url('Images/homebg.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     min-height: 100vh;
