--- a/OHIO/CSS/postpageStyle.css
+++ b/OHIO/CSS/postpageStyle.css
@@ -89,7 +89,6 @@ body {
     z-index: 2; 
   }
 
-  
   .search-container form {
     display: inline-block;
     margin: 0;
@@ -110,7 +109,7 @@ body {
   }
 
   .post-container {
-    width: 60%;
+    width: 80%;
     margin: 40px auto;
     background-color: white;
     border-radius: 20px;
@@ -150,21 +149,17 @@ body {
 
   
   
-  .btn-like {
+  .btn-like .fa-heart {
     color: #ccc;
-    transition: color 0.2s ease-in-out;
   }
   
-  .btn-like:hover {
-    color: #333;
+  .btn-like.liked .fa-heart {
+    color: red;
   }
   
-  .btn-like.liked {
-    color: #f00;
-  }
 
   .comment-container {
-    width: 60%;
+    width: 80%;
     margin: 40px auto;
     background-color: white;
     border-radius: 20px;
@@ -172,7 +167,7 @@ body {
     box-shadow: 0px 0px 20px rgba(0,0,0,0.2);
   }
   .comment-incontainer {
-    width: 60%;
+    width: 100%;
     margin: 20px auto;
     background-color: white;
     border-radius: 20px;
@@ -181,6 +176,40 @@ body {
   }
   .comment-content {
     text-align: center;
+  }
+  .rating {
+    display: inline-block;
+  }
+  
+  .star {
+    display: inline-block;
+    cursor: pointer;
+    font-size: 20px;
+    margin-right: 5px;
+  }
+  
+  .rating .star {
+    font-size: 24px;
+    color: #ccc;
+    cursor: pointer;
+  }
+  
+  .rating .star.active {
+    color: #ffc107;
+  }
+  
+  
+  
+  .rating-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 80%;
+    margin: 40px auto;
+    background-color: white;
+    border-radius: 20px;
+    padding: 20px;
+    box-shadow: 0px 0px 20px rgba(0,0,0,0.2);
   }
   
   
