--- a/OHIO/CSS/search.css
+++ b/OHIO/CSS/search.css
@@ -22,6 +22,7 @@ body {
     }  
   }
   
+  
   .navbar {
     background-color: #000000;
     height: 60px;
@@ -80,35 +81,33 @@ body {
 }
 
   
-  .search-container {
-    flex-grow: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative; 
-    z-index: 2; 
-  }
+.search-container {
+  flex-grow: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative; 
+  z-index: 2; 
+}
 
-  .search-container form {
-    display: inline-block;
-    margin: 0;
-  }
-  
-  .search-container label {
-    display: none;
-  }
-  
-  .search-container input[type="text"] {
-    padding: 8px 12px;
-    border: 2px solid #ccc;
-    border-radius: 15px;
-    outline: none;
-    font-size: 16px;
-    width: 800px;
-    height: 60px;
-    margin-top: 15px;
-  }
+.search-container form {
+  display: inline-block;
+  margin: 0;
+}
 
+.search-container label {
+  display: none;
+}
+
+.search-container input[type="text"] {
+  padding: 8px 12px;
+  border: 1px solid #ccc;
+  border-radius: 20px;
+  outline: none;
+  font-size: 16px;
+  width: 300px;
+  margin-right: 8px;
+}
   .rounded-box {
     border-radius: 10px;
     border: 1px solid black;
