updategotgotpassword, login and register page

--- a/bg login/Forgotpassword.css
+++ b/bg login/Forgotpassword.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
 *{
-  font-family: 'Montserrat';
+    font-family:'Montserrat';
 }
 body{
     background-image: url("images/2.jpg");
@@ -22,31 +22,31 @@ form {
   position:relative;
   box-shadow: 0 5px 10px 5px rgba(0,0,0,0.2);
 }
-.inset{
-  padding-left: 30px;
-  padding-right: 30px;
- padding-bottom: 30px;
-    
+
+
+.inset {
+ 	padding:30px; 
+     
 }
-form h1 {
-  font-size:30px;
+
+form h2 {
+  font-size:20px;
   text-align:center;
   padding-top:20px;
   padding-bottom: 0px;
   position:relative;
 }
-
 form h4 {
-  font-size:15px;
-  font-weight: 100;
-  color: gray;
-  text-align:center;
-  padding-top:10px;
-  padding-right: 20px;
-  padding-left: 20px;
-  padding-bottom: 0px;
-  position:relative;
-}
+    font-size:15px;
+    font-weight: 100;
+    color: gray;
+    text-align:center;
+    padding-top:10px;
+    padding-right: 20px;
+    padding-left: 20px;
+    padding-bottom: 0px;
+    position:relative;
+  }
 
 
 label {
@@ -64,9 +64,20 @@ input[type=password] {
   margin-bottom:10px;
 }
 
+label[for=remember]{
+ 	color:rgb(0, 0, 0);
+  display:inline-block;
+  padding-bottom:0;
+  padding-top:0px;
+}
+
+input[type=checkbox] {
+ 	display:inline-block;
+  vertical-align:top;
+}
+
 .p-container {
-  padding:0px 10px 20px 10px; 
-  text-align: left;
+ 	padding:0px 20px 20px 20px; 
 }
 
 .p-container:after {
@@ -79,18 +90,19 @@ input[type=password] {
   display:block;
   float:left;
   color:#0d93ff;
-  padding-top:5px;
+  padding-top:2px;
   font-size: 13px;
 }
+
 button[type=submit] {
-  padding:5px 10px;
- border-radius:em;
- background:#0184ff;
- color:white;
- float:right;
- font-weight:bold;
- cursor:pointer;
- font-size:13px;
+ 	padding:5px 20px;
+  border-radius:em;
+  background:#0184ff;
+  color:white;
+  float:right;
+  font-weight:bold;
+  cursor:pointer;
+  font-size:13px;
 }
 
 
@@ -99,5 +111,5 @@ input[type=text]:hover,
 input[type=password]:hover,
 label:hover ~ input[type=text],
 label:hover ~ input[type=password] {
-  background:#e8f3ff;
+ 	background:#e8f3ff;
 }
