--- a/bg login/Login.css
+++ b/bg login/Login.css
@@ -1,38 +1,51 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;800&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
 *{
-    font-family: 'poppins' ,sans-serif;
+  font-family: 'Montserrat';
 }
 body{
-    background-image: url("images/2.jpg");
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    
+  background-image: url("images/2.jpg");
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  
 }
 
 * { box-sizing: border-box; }
 
 form {
-  background: rgba(230, 226, 226, 0.3); 
-  width:400px;
-  margin:50px auto;
-  border-radius:1.5em;
-  overflow:hidden;
-  position:relative;
-  box-shadow: 0 5px 10px 5px rgba(0,0,0,0.2);
+background: rgba(230, 226, 226, 0.3); 
+width:400px;
+margin:50px auto;
+border-radius:1.5em;
+overflow:hidden;
+position:relative;
+box-shadow: 0 5px 10px 5px rgba(0,0,0,0.2);
 }
 
 
 .inset {
- 	padding:30px; 
-     
+ padding:30px; 
+   
 }
 
 form h1 {
-  font-size:30px;
+font-size:30px;
+text-align:center;
+padding-top:20px;
+padding-bottom: 0px;
+position:relative;
+}
+
+ 
+form h4 {
+  font-size:15px;
+  font-weight: 100;
+  color: gray;
   text-align:center;
-  padding-top:20px;
+  padding-top:10px;
+  padding-right: 20px;
+  padding-left: 20px;
   padding-bottom: 0px;
   position:relative;
 }
@@ -54,7 +67,8 @@ input[type=password] {
 }
 
 label[for=remember]{
- 	color:rgb(0, 0, 0);
+  color:rgb(78, 78, 78);
+  font-size: 12px;
   display:inline-block;
   padding-bottom:0;
   padding-top:0px;
@@ -80,17 +94,18 @@ input[type=checkbox] {
   float:left;
   color:#0d93ff;
   padding-top:2px;
+  font-size: 13px;
 }
 
-input[type=submit] {
- 	padding:5px 20px;
-  border-radius:em;
-  background:#0184ff;
-  color:white;
-  float:right;
-  font-weight:bold;
-  cursor:pointer;
-  font-size:13px;
+button[type=submit] {
+  padding:5px 20px;
+ border-radius:em;
+ background:#0184ff;
+ color:white;
+ float:right;
+ font-weight:bold;
+ cursor:pointer;
+ font-size:13px;
 }
 
 
@@ -99,5 +114,5 @@ input[type=text]:hover,
 input[type=password]:hover,
 label:hover ~ input[type=text],
 label:hover ~ input[type=password] {
- 	background:#e8f3ff;
+  background:#e8f3ff;
 }
