--- a/OHIO/CSS/editPost.css
+++ b/OHIO/CSS/editPost.css
@@ -119,14 +119,14 @@ body {
   .white-box {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     width: 100%;
     max-width: 600px;
     padding: 20px;
     background-color: #fff;
     border: 1px solid #ddd;
     border-radius: 5px;
-    margin: 10px 0;
+    margin: 10px 25%;
   }
   
   .box-date {
