--- a/ProfilePage/css/style.css
+++ b/ProfilePage/css/style.css
@@ -17,6 +17,9 @@ body {
   width: 100%;
   padding: 40px 0;
 }
+.h6{
+  font-size: 15px;
+}
 .slide-container {
   margin: 0 30px;
   overflow: hidden;
