--- a/OHIO/CSS/search.css
+++ b/OHIO/CSS/search.css
@@ -114,13 +114,29 @@ body {
     padding: 20px;
   }
 
+  
   .container {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    flex-direction: column; /* new line */
-    padding-top: 100px;
+    padding-top: 20px; /* Adjust the gap size as needed */
+  }
+  .post-section {
+    background-attachment: fixed;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    margin: 40px;
+  }
+  .post-container {
+    width: 80%;
+    margin: 40px auto;
+    background-color: white;
+    border-radius: 20px;
+    padding: 20px;
+    box-shadow: 0px 0px 20px rgba(0,0,0,0.2);
   }
   
   .white-box {
